fixed brands logos size on mobile

--- a/src/scss/_screen.scss
+++ b/src/scss/_screen.scss
@@ -249,6 +249,13 @@
           font-size: map-get(c.$font-sizes, main-contents-mobile);
         }
       }
+
+      #{&}-brands {
+        & img {
+          width: 120px;
+          cursor: pointer;
+        }
+      }
     }
 
     .products-desc {
