--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -265,7 +265,7 @@ body {
 
   #{&}-number {
     @include c.flex(column);
-    align-items: center;
+    align-items: flex-start;
     color: c.$maincolor;
     @include c.secFont;
     font-size: map-get(c.$font-sizes, hero-main-text);
@@ -279,11 +279,6 @@ body {
   #{&}-brands {
     margin-top: 20px;
     width: 100%;
-    // display: grid;
-    // row-gap: 15px;
-    // column-gap: 10px;
-    // align-items: center;
-    // grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     @include c.flex(row);
     flex-wrap: wrap;
 
